--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -117,5 +117,31 @@
         border-radius: 50%;
         margin-right: 1rem;
     }
+}
 
+
+.side-nav{
+    &__item {
+
+    }
+
+    &__link {
+
+    }
+
+    &__icon {
+
+    }
+
+    &__item {
+
+    }
+
+    &__item {
+
+    }
+
+    &__item {
+
+    }
 }
