--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -25,10 +25,16 @@
     background-color: var(--color-grey-dark-1);
 
     flex: 0 0 18%; //18% - width
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
 }
 
 .hotel-view{
     background-color: #fff;
     flex: 1; //element grows as much as it can -> occupy all available space
+    
+    //TEST:
+    height: 80rem;
 }
