--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -199,3 +199,41 @@
         display: block; //image should always be a block or inline-block!!
     }
 }
+
+////////////////////////////////////
+// HOTEL OVERVIEW
+.overview{
+    display: flex;
+
+    &__heading {
+
+    }
+
+    &__stars {
+        // flex: 1; //this item grows and occupies all the available space
+        margin-right: auto;
+    }
+
+    &__icon-star,
+    &__icon-location {
+        width: 1.75rem;
+        height: 1.75rem;
+        fill: var(--color-primary);
+    }
+
+    &__location {
+
+    }
+
+    &__rating {
+
+    }
+
+    &__rating-average {
+
+    }
+
+    &__rating-count {
+
+    }
+}
