--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,7 +10,7 @@
     font-size: 1.4rem;
     height: 7rem;
     background-color: #fff;
-    border-bottom: 1px solid var(--color-grey-light-2);
+    border-bottom: var(--line);
 
     display: flex;
     justify-content: space-between;
@@ -37,4 +37,22 @@
     
     //TEST:
     height: 80rem;
+}
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+}
+
+.description {
+    background-color: orangered;
+    flex: 0 0 60%; 
+    margin-right: 4.5rem;
+}
+
+.user-reviews {
+    background-color: yellowgreen;
+    flex: 1;
 }
