Media queries added

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -16,6 +16,12 @@
     align-items: center;
     justify-content: center;
 
+    @media only screen and (max-width: $bp-smallest) {
+        order: 1;
+        flex: 0 0 100%;
+        background-color: var(--color-grey-light-2);
+    }
+
     &__input {
         font-family: inherit;
         font-size: inherit;
@@ -127,11 +133,24 @@
     list-style: none;
     margin-top: 3.5rem;
 
+    @media only screen and (max-width: $bp-medium) {
+        display: flex;
+        margin: 0;
+    }
+
     &__item {
         position: relative;
 
         &:not(:last-child){
             margin-bottom: .5rem;
+
+            @media only screen and (max-width: $bp-medium) {
+                margin-bottom: 0;
+            }
+        }
+
+        @media only screen and (max-width: $bp-medium) {
+            flex: 1;
         }
     }
 
@@ -171,6 +190,16 @@
 
         display: flex;
         align-items: center;
+
+        @media only screen and (max-width: $bp-medium) {
+            justify-content: center;
+            padding: 2rem;
+        }
+
+        @media only screen and (max-width: $bp-small) {
+            flex-direction: column;
+            padding: 1.5rem .5rem;
+        }
     }
 
     &__icon {
@@ -178,6 +207,13 @@
         height: 1.75rem;
         margin-right: 2rem;
         fill: currentColor;
+
+        @media only screen and (max-width: $bp-small) {
+            margin-right: 0;
+            margin-bottom: .7rem;
+            width: 1.5rem;
+            height: 1.5rem;
+        }
     }
 }
 
@@ -188,6 +224,10 @@
     color: var(--color-grey-light-4);
     text-align: center;
     padding: 2.5rem;
+
+    @media only screen and (max-width: $bp-medium) {
+        display: none;
+    }
 }
 
 ////////////////////////////////////
@@ -213,6 +253,19 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         padding: 1.5rem 3rem;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.8rem;
+            padding: 1.25rem 2rem;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+            font-size: 1.5rem;
+            padding: 1.15rem 1.5rem;
+            letter-spacing: 0;
+            text-transform: none;
+            font-weight: 500;
+        }
     }
 
     &__stars {
@@ -226,16 +279,29 @@
         width: 1.75rem;
         height: 1.75rem;
         fill: var(--color-primary);
+
+        @media only screen and (max-width: $bp-smallest) {
+            width: 1.50rem;
+            height: 1.50rem;
+        }
     }
 
     &__location {
         font-size: 1.2rem;
         display: flex;
         vertical-align: center;
+
+        @media only screen and (max-width: $bp-smallest) {
+            font-size: 1rem;
+        }
     }
 
     &__icon-location{
         margin-right: .5rem;
+
+        @media only screen and (max-width: $bp-smallest) {
+            margin-right: 0;
+        }
     }
 
     &__rating {
@@ -249,17 +315,42 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+
+        @media only screen and (max-width: $bp-small) {
+            padding: 0 1.25rem;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+            padding: 0 1rem;
+            margin-left: 2rem;
+        }
     }
 
     &__rating-average {
         font-size: 2.25rem;
         font-weight: 300;
         margin-bottom: -3px;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 1.8rem;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+            font-size: 1.5rem;
+        }
     }
 
     &__rating-count {
         font-size: .8rem;
         text-transform: uppercase;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: .5rem;
+        }
+
+        @media only screen and (max-width: $bp-smallest) {
+            font-size: .1rem;
+        }
     }
 }
 
@@ -372,7 +463,7 @@
     }
 
     &__friends{
-
+        display: flex;
     }
 
     &__photo{
@@ -383,7 +474,7 @@
         border: 3px solid #fff;
 
         &:not(:last-child) {
-            margin-right: -1.5rem;
+            margin-right: -2rem;
         }
     }
 }
@@ -397,6 +488,11 @@
     margin-bottom: 3.5rem;
     position: relative;
     overflow: hidden;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
 
     &__text {
         z-index: 10;
@@ -458,12 +554,26 @@
 .cta {
     padding: 3.5rem 0;
     text-align: center;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2.5rem 0;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+        padding: 2rem 0;
+
+    }
     
     &__book-now{
         font-size: 2rem;
         font-weight: 300;
         text-transform: uppercase;
         margin-bottom: 2.5rem;
+
+        @media only screen and (max-width: $bp-smallest) {
+            font-size: 1.3rem;
+            margin-bottom: 2rem;
+        }
     }
 }
 
@@ -481,6 +591,10 @@
     overflow: hidden;
     cursor: pointer;
 
+    @media only screen and (max-width: $bp-smallest) {
+        font-size: 1.3rem;
+    }
+
     & > * {
         display: inline-block;
         height: 100%;
@@ -490,6 +604,10 @@
 
     &__visible {
         padding: 2rem 7.5rem;
+
+        @media only screen and (max-width: $bp-smallest) {
+            padding: 1.6rem 7.1rem;
+        }
     }
 
     &__invisible {
@@ -497,6 +615,10 @@
         left: 0;
         top: -100%;
         padding: 2rem 0;
+
+        @media only screen and (max-width: $bp-smallest) {
+            padding: 1.6rem 0;
+        }
     }
 
     &:hover {
